force-app/main/default/objects/PII__c/PII__c.object-meta.xml
<CustomObject>
    <label>PII</label>
    <nameField>
        <displayFormat>PII-{0000000000}</displayFormat>
        <label>PII Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PII</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>