force-app/main/default/objects/PII__c/fields/Compliance_Type__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Type__c</fullName>
    <description>Purpose is to denote the compliance or privacy law\rule that the rows value falls under.</description>
    <label>Compliance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GDPR</fullName>
            </value>
            <value>
                <fullName>FERPA</fullName>
            </value>
            <value>
                <fullName>NONE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>