force-app/main/default/objects/PII__c/fields/Constituent__c.field-meta.xml
<CustomField>
    <fullName>Constituent__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Link to the constituent that the PII row is for</description>
    <label>Constituent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>PII</relationshipLabel>
    <relationshipName>PII</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>