force-app/main/default/objects/PII__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Source of the PII value fields data, uses global data source picklist set but filtered down via record type</description>
    <label>Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ucinn_ascendv2__Data_Source</valueSetName>
    </valueSet>
</CustomField>