force-app/main/default/objects/PII__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Denotes the type off PII the value field hold. If a rollup is needed the picklist value will be used in the rollup filter to determine what field on the contact to roll the PII data into.</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Race/Ethnicity</fullName>
            </value>
            <value>
                <fullName>Citizenship</fullName>
            </value>
            <value>
                <fullName>Ethnicity</fullName>
                <isActive>false</isActive>
                <label>Ethnicity</label>
            </value>
            <value>
                <fullName>International Student</fullName>
                <isActive>false</isActive>
                <label>International Student</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>