force-app/main/default/objects/PII__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>This field holds the actual PII data the other fields would be considered metadata to this fields data. These values should be assigned to a Type through field dependencies</description>
    <label>Value</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>197</fullName>
            </value>
            <value>
                <fullName>AFG</fullName>
            </value>
            <value>
                <fullName>ALB</fullName>
            </value>
            <value>
                <fullName>ALG</fullName>
            </value>
            <value>
                <fullName>American Indian or Alaska Native</fullName>
            </value>
            <value>
                <fullName>AND</fullName>
            </value>
            <value>
                <fullName>ANG</fullName>
            </value>
            <value>
                <fullName>ANL</fullName>
            </value>
            <value>
                <fullName>ARG</fullName>
            </value>
            <value>
                <fullName>ARM</fullName>
            </value>
            <value>
                <fullName>Asian</fullName>
            </value>
            <value>
                <fullName>AST</fullName>
            </value>
            <value>
                <fullName>AUS</fullName>
            </value>
            <value>
                <fullName>AWI</fullName>
            </value>
            <value>
                <fullName>AZB</fullName>
            </value>
            <value>
                <fullName>BAH</fullName>
            </value>
            <value>
                <fullName>BAN</fullName>
            </value>
            <value>
                <fullName>BHI</fullName>
            </value>
            <value>
                <fullName>BHN</fullName>
            </value>
            <value>
                <fullName>BKF</fullName>
            </value>
            <value>
                <fullName>Black or African American</fullName>
            </value>
            <value>
                <fullName>BLG</fullName>
            </value>
            <value>
                <fullName>BLS</fullName>
            </value>
            <value>
                <fullName>BLZ</fullName>
            </value>
            <value>
                <fullName>BOL</fullName>
            </value>
            <value>
                <fullName>BOS</fullName>
            </value>
            <value>
                <fullName>BRA</fullName>
            </value>
            <value>
                <fullName>BRB</fullName>
            </value>
            <value>
                <fullName>BTW</fullName>
            </value>
            <value>
                <fullName>BUL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>