force-app/main/default/objects/PII__c/recordTypes/PII.recordType-meta.xml
<RecordType>
    <fullName>PII</fullName>
    <active>true</active>
    <label>PII</label>
</RecordType>