force-app/main/default/objects/PII__c/validationRules/Duplicate_Row_Detected.validationRule-meta.xml
<ValidationRule>
    <fullName>Duplicate_Row_Detected</fullName>
    <active>true</active>
    <description>Used in flow &quot;ISUF - PII one row per contact and type&quot; to enforces one row per constituent per PII type.  Prevents the rollup having to decide which values of the same type should be rolled up as only one row is allowed.</description>
    <errorConditionFormula>Invalid_save__c</errorConditionFormula>
    <errorMessage>A PII record for this constituent with the same type already exists.</errorMessage>
</ValidationRule>